# building_company-

./: Dockerfile  README.md  alembic.ini  config.py  custom_formatter.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements_dokcer.txt
alembic/: env.py
app/: __init__.py  logger.config  models.py  routes.py  schemas.py
app/routes/: admin.py  authentication.py  clients.py  consists.py  contracts.py  drivers.py  employees.py  errors.py  info.py  managers.py  orders.py  products.py  warehouses.py
app/services/: UserLogin.py  check_post.py  clients.py  drivers.py  orders.py  products.py
app/static/css/: 400_styles.css  401_styles.css  (+4 more)
app/templates/: 400.html  401.html  403.html  404.html  500.html  about.html  admin_page.html  all_clients.html  client_card.html  clients.html  clients_list.html  consist_card.html  consists.html  contract_card.html  contracts.html  driver_card.html  drivers.html  employee_card.html  employees.html  found_clients.html  found_consists.html  found_contracts.html  found_drivers.html  found_employees.html  found_orders.html  found_products.html  found_warehouses.html  login.html  manager_order_card.html  managers_orders.html  managers_orders_search.html  order_card.html  orders.html  orders_compl.html  product_card.html  products.html  products_list.html  profile.html  warehouse_card.html  warehouses.html
migrations/versions/: 99307b83d06b_m1.py
tests/: test_client.py  test_consist.py  test_contract.py  test_driver.py  test_employee.py  test_managers.py  test_order.py  test_product.py  test_warehouse.py
(+1 files in other folders)
