[tool.poetry]
name = "building-company"
version = "0.1.0"
description = ""
authors = ["Arihina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
flask-sqlalchemy = "^3.1.1"
psycopg = "3.2.1"
psycopg-binary = "3.2.1"
flask-cors = "^4.0.1"
flask-login = "^0.6.3"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
